--- a/website/index.html
+++ b/website/index.html
@@ -6,14 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Are we python yet?</title>
+  <title>Are we Python yet?</title>
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='https://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
-  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+  <!--<link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"> -->
+  <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
   <link href='css/metricsgraphics.css' rel='stylesheet' type='text/css'>
+  <link href='css/awpy.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -24,12 +27,12 @@
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#">Overview</a></li>
-          <li><a href="https://github.com/rfk/arewepythonyet">Performance</a></li>
-          <li><a href="http://pypyjs.org/">Startup</a></li>
+          <li><a href="/index.html">Overview</a></li>
+          <li><a href="/performance.html">Performance</a></li>
+          <li><a href="/startup.html">Startup</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="https://github.com/rfk/arewepythonyet">Code</a></li>
+          <li><a href="/about.html">About</a></li>
           <li><a href="http://pypyjs.org/">PyPy.js</a></li>
         </ul>
       </div>
@@ -41,38 +44,46 @@
     <div class="row">
       <div class="col-lg-4">
         <h2>Performance</h2>
-        <p>Here's a litte blurb about these results, how we measure them, what they mean, blah blah.</p>
-        <div id="legend"></div>
+        <p>Performance on a selection of Python benchmarks, normalized to that of a native Python interpreter.  Smaller numbers are better.</p>
+        <p>Normalize to: &nbsp;&nbsp;<select id="config-py-norm"><option>cpython</option><option>pypy</option></select></p>
+        <p>With JIT: &nbsp;&nbsp;<select id="config-py-jit"><option>on</option><option>off</option></select></p>
+        <p>Average performance across JavaScript engines and across Python benchmarks is:</p>
+        <div id="compare-py-trend">X times slower than cpython</div>
       </div>
-      <div class="col-lg-4 col-graph" id="graph-py-bars"></div>
-      <div class="col-lg-4 col-graph" id="graph-py-line"></div>
+      <div class="col-lg-4 col-graph" id="graph-py-breakdown"></div>
+      <div class="col-lg-4 col-graph">
+        <div class="awpy-graph" id="graph-py-trend"></div>
+        <div class="awpy-legend" id="legend-py-trend"></div>
+      </div>
     </div>
 
     <div class="row">
       <div class="col-lg-4">
         <h2>Startup Overhead</h2>
-        <p>Here's a litte blurb about these results, how we measure them, what they mean, blah blah.</p>
+        <p>Overhead involved in downloading the core interpreter files and loading them up into a running VM.  Smaller numbers are better.</p>
+        <p>With JIT: &nbsp;&nbsp;<select id="config-startup-jit"><option>on</option><option>off</option></select></p>
       </div>
-      <div class="col-lg-4 col-graph" id="graph-file-size"></div>
-      <div class="col-lg-4 col-graph" id="graph-load-time"></div>
-    </div>
-
-    <div class="row">
-      <div class="col-lg-4">
-        <h2>PyStone</h2>
-        <p>Because this is the benchmark that started it all...</p>
+      <div class="col-lg-4 col-graph">
+        <div class="awpy-graph" id="graph-file-size"></div>
+        <div class="awpy-legend" id="legend-file-size"></div>
       </div>
-      <div class="col-lg-4 col-graph" id="graph-pystone-mean"></div>
-      <div class="col-lg-4 col-graph" id="graph-pystone-seq"></div>
+      <div class="col-lg-4 col-graph">
+        <div class="awpy-graph" id="graph-load-time"></div>
+        <div class="awpy-legend" id="legend-load-time"></div>
+      </div>
     </div>
 
   </div>
 
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+<!--  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js' charset='utf-8'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js' charset='utf-8'></script>-->
+  <script src='js/jquery.min.js'></script>
+  <script src='js/bootstrap.min.js'></script>
+  <script src='js/d3.min.js' charset='utf-8'></script>
   <script src='js/metricsgraphics.js'></script>
-  <script src='js/main.js'></script>
+  <script src='js/common.js'></script>
+  <script src='js/overview.js'></script>
 </body>
 
 </html>
