--- a/website/performance.html
+++ b/website/performance.html
@@ -23,12 +23,13 @@
   <div class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand">Are we Python yet?</a>
+        <a href="/index.html" class="navbar-brand">Are we Python yet?</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/index.html">Overview</a></li>
           <li><a href="/performance.html">Performance</a></li>
+          <li><a href="/startup.html">Startup</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/about.html">About</a></li>
@@ -42,13 +43,13 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2>Current Benchmarks</h2>
-        <p>Performance on a selection of Python benchmarks, normalized to that of a native Python interpreter.  Smaller numbers are better.</p>
+        <h2><a name="breakdown">Current Benchmarks</a></h2>
+        <p>Performance on a selection of python benchmarks, normalized to that of a native python interpreter.  Smaller numbers are better.</p>
         <p>Compare: &nbsp;&nbsp;<input type="checkbox" id="config-breakdown-show-js" /> js <input type="checkbox" id="config-breakdown-show-d8" /> d8 <input type="checkbox" id="config-breakdown-show-native" /> native</p>
         <p>Normalized to: &nbsp;&nbsp;<select id="config-breakdown-norm"><option>cpython</option><option>pypy</option></select></p>
         <p>Bench Metric: &nbsp;&nbsp;<select id="config-breakdown-metric"><option>mean</option><option>min</option><option>max</option></select></p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-breakdown-jit"><option>on</option><option>off</option></select></p>
-        <p>Average performance across Python benchmarks is:</p>
+        <p>Average performance across python benchmarks is:</p>
         <div class="awpy-comparison-summary" id="compare-breakdown-mean">X times slower than cpython</div>
       </div>
       <div class="col-lg-8 awpy-col-graph" id="graph-py-breakdown"></div>
@@ -56,7 +57,7 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2>Performance Trend</h2>
+        <h2><a name="trend">Performance Trend</a></h2>
         <p>Mean performance across all python benchmarks, normalized to that of a native python interpreter, over time.  Smaller numbers are better.</p>
         <p>Compare: &nbsp;&nbsp;<input type="checkbox" id="config-trend-show-js" /> js <input type="checkbox" id="config-trend-show-d8" /> d8 <input type="checkbox" id="config-trend-show-native" /> native</p>
         <p>Normalized to: &nbsp;&nbsp;<select id="config-trend-norm"><option>cpython</option><option>pypy</option></select></p>
@@ -71,8 +72,8 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2>Individual Trend</h2>
-        <p>Performance on a particular python benchmarks, normalized to that of a native python interpreter, over time.  Smaller numbers are better.</p>
+        <h2><a name="itrend">Individual Perf Trend</a></h2>
+        <p>Performance on a single python benchmark, normalized to that of a native python interpreter, over time.  Smaller numbers are better.</p>
         <p>Benchmark: &nbsp;&nbsp;<select id="config-itrend-benchmark"></select></p>
         <p>Compare: &nbsp;&nbsp;<input type="checkbox" id="config-itrend-show-js" /> js <input type="checkbox" id="config-itrend-show-d8" /> d8 <input type="checkbox" id="config-itrend-show-native" /> native</p>
         <p>Normalized to: &nbsp;&nbsp;<select id="config-itrend-norm"><option>cpython</option><option>pypy</option></select></p>
@@ -88,7 +89,7 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2>Benchmark Run Detail</h2>
+        <h2><a name="detail">Individual Run Details</a></h2>
         <p>Detailed information for a single run of a particular benchmark.  Smaller numbers are better.</p>
         <p>Benchmark: &nbsp;&nbsp;<select id="config-detail-benchmark"></select></p>
         <p>Compare: &nbsp;&nbsp;<input type="checkbox" id="config-detail-show-js" /> js <input type="checkbox" id="config-detail-show-d8" /> d8 <input type="checkbox" id="config-detail-show-native" /> native</p>
