Assign consistent line colours to engines on the graphs.

--- a/website/performance.html
+++ b/website/performance.html
@@ -90,7 +90,7 @@
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
         <h2><a name="detail">Individual Run Details</a></h2>
-        <p>Detailed information for a single run of a particular benchmark.  Smaller numbers are better.</p>
+        <p>Detailed timings for a single run of a particular benchmark.  This is particularly useful for visualising JIT warmup overhead.  Smaller numbers are better.</p>
         <p>Benchmark: &nbsp;&nbsp;<select id="config-detail-benchmark"></select></p>
         <p>Compare: &nbsp;&nbsp;<input type="checkbox" id="config-detail-show-js" /> js <input type="checkbox" id="config-detail-show-d8" /> d8 <input type="checkbox" id="config-detail-show-native" /> native</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-detail-jit"><option>on</option><option>off</option></select></p>
