--- a/website/index.html
+++ b/website/index.html
@@ -11,10 +11,8 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link href='https://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css' rel='stylesheet' type='text/css'>
-  <!--<link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"> -->
-  <link href='css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-  <link href="css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
   <link href='css/metricsgraphics.css' rel='stylesheet' type='text/css'>
   <link href='css/awpy.css' rel='stylesheet' type='text/css'>
 </head>
@@ -75,17 +73,13 @@
     </div>
 
     <div class="row awpy-row-footer">
-      some sort of copyright info thing here
     </div>
 
   </div>
 
-<!--  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
   <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js'></script>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js' charset='utf-8'></script>-->
-  <script src='js/jquery.min.js'></script>
-  <script src='js/bootstrap.min.js'></script>
-  <script src='js/d3.min.js' charset='utf-8'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.0/d3.min.js' charset='utf-8'></script>
   <script src='js/metricsgraphics.js'></script>
   <script src='js/common.js'></script>
   <script src='js/overview.js'></script>
