--- a/website/about.html
+++ b/website/about.html
@@ -21,16 +21,22 @@
   <div class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
+        <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a href="/index.html" class="navbar-brand">Are we Python yet?</a>
       </div>
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse bs-navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="/index.html">Overview</a></li>
           <li><a href="/performance.html">Performance</a></li>
           <li><a href="/startup.html">Startup</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/about.html">About</a></li>
+          <li class="active"><a href="/about.html">About</a></li>
           <li><a href="http://pypyjs.org/">PyPy.js</a></li>
         </ul>
       </div>
