Add basic scroll-into-view functionality to graph headers

--- a/website/startup.html
+++ b/website/startup.html
@@ -59,7 +59,7 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2><a name="filesize">Load Time</a></h2>
+        <h2><a name="loadtime">Load Time</a></h2>
         <p>The time taken to load, parse and initialize the code and obtain a running PyPy.js VM, over time.  Smaller numbers are better.</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-loadtime-jit"><option>on</option><option>off</option></select></p>
       </div>
@@ -71,7 +71,7 @@
 
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
-        <h2><a name="trend">Startup on This Machine</a></h2>
+        <h2><a name="localtime">Startup on This Machine</a></h2>
         <p>The time taken to download and initialize a PyPy.js VM on this machine.</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-local-jit"><option>on</option><option>off</option></select></p>
       </div>
