Add a "load time on this machine" measurement

--- a/website/startup.html
+++ b/website/startup.html
@@ -73,10 +73,9 @@
       <div class="col-lg-4">
         <h2><a name="localtime">Startup on This Machine</a></h2>
         <p>The time taken to download and initialize a PyPy.js VM on this machine.</p>
-        <p>With JIT: &nbsp;&nbsp;<select id="config-local-jit"><option>on</option><option>off</option></select></p>
       </div>
-      <div class="col-lg-8 col-graph">
-        <p>XXX TODO: code to perform this test at runtime; maybe in a worker?</p>
+      <div class="col-lg-8 col-graph" style="text-align: center;">
+        <div id="localtime-test-now" class="awpy-local-test-runner"><a>Click to Test Now</a></div>
       </div>
     </div>
 
