Wording tweak on website

--- a/website/startup.html
+++ b/website/startup.html
@@ -72,7 +72,7 @@
     <div class="row awpy-row-graph">
       <div class="col-lg-4">
         <h2><a name="localtime">Startup on This Machine</a></h2>
-        <p>The time taken to download and initialize a PyPy.js VM on this machine.</p>
+        <p>The time taken to download and initialize a PyPy.js VM on this machine.  The javascript is loaded from http://pypyjs.org and will user the browser's cache if present.</p>
       </div>
       <div class="col-lg-8 col-graph" style="text-align: center;">
         <div id="localtime-test-now" class="awpy-local-test-runner"><a>Click to Test Now</a></div>
