Add shout-out to speed.pypy.org on the about page.

--- a/website/about.html
+++ b/website/about.html
@@ -62,7 +62,8 @@
         like to run them locally, or just <a href="/data/">grab the raw data</a> and play around
         with it.</p>
 
-        <p>Charts are powered by the wonderful <a href="http://metricsgraphicsjs.org">MetricsGraphics.js</a>.</p>
+        <p>Benchmarks and inspiration were taken from the <a href="http://speed.pypy.org">PyPy speed center</a>.
+        Charts are powered by the wonderful <a href="http://metricsgraphicsjs.org">MetricsGraphics.js</a>.</p>
 
       </div>
       <div class="col-lg-2"></div>
