Tweak website layout

--- a/website/about.html
+++ b/website/about.html
@@ -46,8 +46,8 @@
   <div class='container'>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-2"></div>
-      <div class="col-lg-8">
+      <div class="col-md-2"></div>
+      <div class="col-md-8">
         <h1 style="margin-bottom: 1.5em">Are we Python yet?</h1>
 
         <p>Frankly, no, not yet &ndash; but we're working on it!</p>
@@ -66,7 +66,7 @@
         Charts are powered by the wonderful <a href="http://metricsgraphicsjs.org">MetricsGraphics.js</a>.</p>
 
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-md-2"></div>
     </div>
 
     <div class="row awpy-row-footer">
