--- a/website/index.html
+++ b/website/index.html
@@ -46,7 +46,7 @@
   <div class='container'>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-4">
+      <div class="col-md-4">
         <!-- XXX TODO: ability to scroll to these anchors via hash fragment -->
         <h2><a href="/performance.html" name="performance">Performance</a></h2>
         <p>Performance on a selection of python benchmarks, normalized to that of a native python interpreter.  Smaller numbers are better.</p>
@@ -55,24 +55,24 @@
         <p>Average performance across javascript engines and across python benchmarks is:</p>
         <div class="awpy-comparison-summary" id="compare-py-trend">X times slower than cpython</div>
       </div>
-      <div class="col-lg-4 awpy-col-graph" id="graph-py-breakdown"></div>
-      <div class="col-lg-4 awpy-col-graph">
+      <div class="col-md-4 awpy-col-graph" id="graph-py-breakdown"></div>
+      <div class="col-md-4 awpy-col-graph">
         <div class="awpy-graph" id="graph-py-trend"></div>
         <div class="awpy-legend" id="legend-py-trend"></div>
       </div>
     </div>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-4">
+      <div class="col-md-4">
         <h2><a href="/startup.html" name="startup">Startup Overhead</a></h2>
         <p>Overhead involved in downloading the core interpreter files and loading them up into a running VM.  Smaller numbers are better.</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-startup-jit"><option>on</option><option>off</option></select></p>
       </div>
-      <div class="col-lg-4 awpy-col-graph">
+      <div class="col-md-4 awpy-col-graph">
         <div class="awpy-graph" id="graph-file-size"></div>
         <div class="awpy-legend" id="legend-file-size"></div>
       </div>
-      <div class="col-lg-4 awpy-col-graph">
+      <div class="col-md-4 awpy-col-graph">
         <div class="awpy-graph" id="graph-load-time"></div>
         <div class="awpy-legend" id="legend-load-time"></div>
       </div>
