--- a/website/startup.html
+++ b/website/startup.html
@@ -46,35 +46,35 @@
   <div class='container'>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-4">
+      <div class="col-md-4">
         <h2><a name="filesize">Download Size</a></h2>
         <p>The combined size of all files that must be downloaded to initialize the core PyPy.js VM, over time.  Smaller numbers are better.</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-filesize-jit"><option>on</option><option>off</option></select></p>
       </div>
-      <div class="col-lg-8 awpy-col-graph">
+      <div class="col-md-8 awpy-col-graph">
         <div class="awpy-graph" id="graph-file-size"></div>
         <div class="awpy-legend" id="legend-file-size"></div>
       </div>
     </div>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-4">
+      <div class="col-md-4">
         <h2><a name="loadtime">Load Time</a></h2>
         <p>The time taken to load, parse and initialize the code and obtain a running PyPy.js VM, over time.  Smaller numbers are better.</p>
         <p>With JIT: &nbsp;&nbsp;<select id="config-loadtime-jit"><option>on</option><option>off</option></select></p>
       </div>
-      <div class="col-lg-8 awpy-col-graph">
+      <div class="col-md-8 awpy-col-graph">
         <div class="awpy-graph" id="graph-load-time"></div>
         <div class="awpy-legend" id="legend-load-time"></div>
       </div>
     </div>
 
     <div class="row awpy-row-graph">
-      <div class="col-lg-4">
+      <div class="col-md-4">
         <h2><a name="localtime">Startup on This Machine</a></h2>
         <p>The time taken to download and initialize a PyPy.js VM on this machine.  The javascript is loaded from http://pypyjs.org and will user the browser's cache if present.</p>
       </div>
-      <div class="col-lg-8 col-graph" style="text-align: center;">
+      <div class="col-md-8 col-graph" style="text-align: center;">
         <div id="localtime-test-now" class="awpy-local-test-runner"><a>Click to Test Now</a></div>
       </div>
     </div>
