Fixed a typo in a URL

--- a/website/startup.html
+++ b/website/startup.html
@@ -37,7 +37,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/about.html">About</a></li>
-          <li><a href="http://PyPy.js.org/">PyPy.js</a></li>
+          <li><a href="http://pypyjs.org/">PyPy.js</a></li>
         </ul>
       </div>
     </div>
